[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "cvzone>=1.6.1",
    "fastapi[standard]>=0.115.13",
    "firebase-admin>=6.9.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.26",
    "langgraph>=0.4.8",
    "mediapipe>=0.10.21",
    "ultralytics>=8.3.158",
]
